# connected-mobility-solution-on-aws

./: .coveragerc  .devcontainer.json  .gitignore  .isort.cfg  .license-check.yaml  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  NOTICE.txt  Pipfile  README.md  SECURITY.md  cdk.json  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json  install_smithy.sh
source/modules/cms_sample/: .pre-commit-config.yaml  Makefile  NOTICE.txt  Pipfile  README.md  mkdocs.yml  pyproject.toml
source/modules/cms_sample/.acdp/: template.yaml
source/modules/cms_sample/source/: app.py  conftest.py
source/modules/cms_sample/source/infrastructure/: cms_sample_stack.py
source/modules/cms_sample/source/infrastructure/constructs/: module_integration.py
source/modules/cms_sample/source/infrastructure/tests/: test_cms_sample_stack.py
source/modules/cms_sample/source/infrastructure/tests/__snapshots__/test_cms_sample_stack/: test_cms_sample_snapshot.json
source/modules/cms_sample/source/tests/: conftest.py
source/modules/cms_sample/source/tests/fixtures/: fixture_shared.py
source/modules/cms_sample/source/tests/infrastructure/: test_cms_sample_snapshots.py
source/modules/cms_sample/source/tests/infrastructure/__snapshots__/test_cms_sample_on_aws_snapshots/: test_cms_sample_on_aws_snapshot.json
templates/modules/cms_provisioning_on_aws/v1/instance_infrastructure/: .coveragerc  .license-check.yaml  .pre-commit-config.yaml  NOTICE.txt  Pipfile  README.md  cdk-to-proton.sh  cdk.json  manifest.yaml  pyproject.toml  requirements.txt  setup.py  template.json
templates/modules/cms_provisioning_on_aws/v1/instance_infrastructure/deployment/: build-s3-dist.sh  cleanup_resources.py  create_iot_credentials.sh  run-cfn-nag.sh  run-unit-tests.sh
templates/modules/cms_provisioning_on_aws/v1/instance_infrastructure/deployment/cdk-solution-helper/: README.md
templates/modules/cms_provisioning_on_aws/v1/instance_infrastructure/documentation/data/: cms-vehicle-provisioning-data-schema.plantuml
templates/modules/cms_provisioning_on_aws/v1/instance_infrastructure/documentation/sequence/: cms-vehicle-provisioning-deployment-sequence-diagram.plantuml  cms-vehicle-provisioning-initialize-sequence-diagram.plantuml  cms-vehicle-provisioning-onboarding-sequence-diagram.plantuml
templates/modules/cms_provisioning_on_aws/v1/instance_infrastructure/source/: .cdk-nag-suppression-list.json  .cfn-nag-suppression-list.json  app.py
templates/modules/cms_provisioning_on_aws/v1/instance_infrastructure/source/config/: constants.py
templates/modules/cms_provisioning_on_aws/v1/instance_infrastructure/source/handlers/custom_resource/: custom_resource.py
templates/modules/cms_provisioning_on_aws/v1/instance_infrastructure/source/handlers/custom_resource/lib/: custom_resource_type_enum.py
templates/modules/cms_provisioning_on_aws/v1/instance_infrastructure/source/handlers/provisioning/: initial_connection.py  post_provision.py  pre_provision.py
templates/modules/cms_provisioning_on_aws/v1/instance_infrastructure/source/handlers/provisioning/lib/: certificate_status_enum.py  dynamo_schema.py  dynamo_table_name_key_enum.py  validators.py
templates/modules/cms_provisioning_on_aws/v1/instance_infrastructure/source/handlers/rotate_secret/: rotate_secret.py
templates/modules/cms_provisioning_on_aws/v1/instance_infrastructure/source/handlers/rotate_secret/lib/: rotate_secret_enum.py
templates/modules/cms_provisioning_on_aws/v1/instance_infrastructure/source/infrastructure/: cms_provisioning_on_aws_stack.py
templates/modules/cms_provisioning_on_aws/v1/instance_infrastructure/source/infrastructure/aspects/: nag_suppression.py
templates/modules/cms_provisioning_on_aws/v1/instance_infrastructure/source/infrastructure/stacks/: auxiliary_lambdas_stack.py  common_dependencies_stack.py  iot_claim_provisioning_stack.py  provisioning_lambdas_stack.py
templates/modules/cms_provisioning_on_aws/v1/instance_infrastructure/source/tests/: conftest.py
templates/modules/cms_provisioning_on_aws/v1/instance_infrastructure/source/tests/fixtures/: fixture_shared.py
templates/modules/cms_provisioning_on_aws/v1/instance_infrastructure/source/tests/handlers/custom_resource/: test_custom_resource.py
templates/modules/cms_provisioning_on_aws/v1/instance_infrastructure/source/tests/handlers/fixtures/: fixture_custom_resource.py  fixture_dynamodb.py  fixture_initial_connection.py  fixture_post_provision.py  fixture_pre_provision.py  fixture_rotate_secret.py
templates/modules/cms_provisioning_on_aws/v1/instance_infrastructure/source/tests/infrastructure/: test_snapshot.py
templates/modules/cms_provisioning_on_aws/v1/instance_infrastructure/test_scripts/: dynamodb_helpers.py  provisioning_by_claim.py
(+1869 files in other folders)
