[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.isort]
profile = "black"


[tool.bandit]
exclude_dirs = ["cdk.out", "build", ".mypy_cache", ".venv", "*/test_*.py", "*/test_*.py"]

[tool.pylint.'SIMILARITIES']
  # Ignore comments when computing similarities.
ignore-comments=true
  # Ignore docstrings when computing similarities.
ignore-docstrings=true
  # Ignore imports when computing similarities.
ignore-imports=true
  # Minimum lines number of a similarity.
min-similarity-lines=25

[tool.pylint.'DESIGN']
  # Maximum number of arguments for function / method.
max-args=7
  # Maximum number of attributes for a class (see R0902).
max-attributes=15
  # Maximum number of boolean expressions in an if statement (see R0916).
max-bool-expr=5
  # Maximum number of branch for function / method body.
max-branches=12
  # Maximum number of locals for function / method body.
max-locals=15
  # Maximum number of parents for a class (see R0901).
max-parents=7
  # Maximum number of public methods for a class (see R0904).
max-public-methods=20
  # Maximum number of return / yield for function / method body.
max-returns=2
  # Maximum number of statements in function / method body.
#max-statements=50
  # Minimum number of public methods for a class (see R0903).
min-public-methods=0

[tool.pylint.'MESSAGES CONTROL']
# C0114, C0115, C0116 are for docstrings which we don't use
# W0613 alarms on unused arguments
disable = "C0114, C0115, C0116, W0613"


[tool.pylint.'FORMAT']
  # Expected format of line ending, e.g. empty (any line ending), LF or CRLF.
expected-line-ending-format=[]
  # Regexp for a line that is allowed to be longer than the limit.
ignore-long-lines='^\s*(# )?<?https?://\S+>?$'
  # Number of spaces of indent required inside a hanging or continued line.
indent-after-paren=4
  # String used as indentation unit. This is usually "    " (4 spaces) or "\t" (1
  # tab).
indent-string='    '
  # Maximum number of characters on a single line.
max-line-length=200

[tool.pylint.'TYPECHECK']
generated-members=["aws_lambda.Runtime"]
